--- a/client/layouts/singup/singup.html
+++ b/client/layouts/singup/singup.html
@@ -54,7 +54,7 @@
       <div class="form-group">
         <label class="control-label col-sm-4" for="dateOfBirth">Date of Birthday</label>
         <div class="col-sm-8">
-          <input id="dateOfBirth" name="dateOfBirth" type="text" class="form-control" placeholder="MMM DD, YYYY" value="{{dateOfBirth}}">
+          <input id="dateOfBirth" name="dateOfBirth" type="date" class="form-control" placeholder="MMM DD, YYYY" value="{{dateOfBirth}}">
         </div>
       </div>
 
